--- a/db-service/src/main/resources/application.properties
+++ b/db-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=db-service
-
-server.port=8300
+#spring.application.name=db-service
+##
+##server.port=8300
 
 spring.datasource.url=jdbc:mysql://localhost:3306/stockviewer
 spring.datasource.username=root
